k8s/20-s1.yaml
apiVersion: v1
kind: Service
metadata:
  name: raw-api
  namespace: fpl-system
spec:
  ports:
    - port: 8002
      targetPort: 8002
  selector:
    app: raw-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: raw-api
  namespace: fpl-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: raw-api
  template:
    metadata:
      labels:
        app: raw-api
    spec:
      containers:
        - name: raw-api
          image: ghcr.io/l-e-v-e-n-t-e-k-k/fpl-s1:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8002
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8002
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8002
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
